# Double-headed-Sentinel

./: README.md
armors_choose_node/: CMakeLists.txt  README.md  package.xml
armors_choose_node/src/: armors_choose_node.cpp
choose/: CMakeLists.txt  README.md  package.xml
choose/src/: choose.cpp
info_separate/: CMakeLists.txt  README.md  package.xml
info_separate/src/: camera_info_seprate.cpp
rm_auto_aim-main/armor_detector_first/: CMakeLists.txt  README.md  package.xml
rm_auto_aim-main/armor_detector_first/src/: detector_node.cpp
rm_auto_aim-main/armor_detector_second/: CMakeLists.txt  README.md  package.xml
rm_auto_aim-main/armor_detector_second/src/: detector_node.cpp
rm_auto_aim-main/armor_tracker/src/: tracker_node.cpp
rm_auto_aim-main/auto_aim_interfaces/: package.xml
rm_gimbal_description/: CMakeLists.txt  README.md  package.xml
rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
rm_serial_driver/: CMakeLists.txt  README.md  package.xml
rm_serial_driver/config/: serial_driver.yaml
rm_serial_driver/include/rm_serial_driver/: crc.hpp  packet.hpp  rm_serial_driver.hpp
rm_serial_driver/launch/: serial_driver.launch.py
rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp
rm_vision/: Dockerfile  README.md
rm_vision/rm_vision_bringup/config/: node_params.yaml
rm_vision/rm_vision_bringup/launch/: common.py  hardware.launch.py  no_hardware.launch.py  vision_bringup.launch.py
ros2-hik-camera/: CMakeLists.txt  package.xml
ros2-hik-camera/src/: hik_camera_node.cpp
ros2-hik-camera_first/: CMakeLists.txt  README.md  package.xml
ros2-hik-camera_first/config/: camera_info.yaml  camera_params.yaml
ros2-hik-camera_first/launch/: hik_camera.launch.py
ros2-hik-camera_first/src/: hik_camera_first_node.cpp
ros2-hik-camera_second/: CMakeLists.txt  README.md  package.xml
ros2-hik-camera_second/config/: camera_info.yaml  camera_params.yaml
ros2-hik-camera_second/hikSDK/include/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  PixelType.h
ros2-hik-camera_second/launch/: hik_camera.launch.py
ros2-hik-camera_second/src/: hik_camera_second_node.cpp
ros2-mindvision-camera/mvsdk/include/: CameraApi.h  CameraDefine.h  CameraStatus.h
test/: CMakeLists.txt  package.xml
